# Setup-Repository

./: .bandit  .gitattributes  .gitignore  .pre-commit-config.yaml  .safety-project.ini  .yamllint  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  config.json.template  coverage-improvement-plan.md  coverage.json  coverage.xml  final-verification-report.md  first-setup.py  github_api.py  main.py  pyproject.toml  pytest-windows-optimization.toml  pytest.ini  quality-report.json  release-notes.md  renovate.json  repo-sync.py  requirements.txt  rules.md  safety_check.py  test-issues-report.md  test-report.json  test-results.xml  test_file.txt  utils.py  (+1 more)
.amazonq/rules/: codeql-fixes-2025-01-27.md  codeql-security-fixes.md  implementation-rules.md  multiplatform-test-policy.md  project-rules.md  quality-rules.md  rules.md  rules_summary.md  rules_v2.md  security-fix-plan.md  test-fix-plan.md  test-fix-summary.md  unimplemented-workflow.md  unit-test-expansion-plan.md  workflow-consolidation-plan.md  workflow_consolidation_plan.md
.github/: CI_SETUP.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci-matrix.yml  ci.yml  ci.yml.disabled  coverage-report.yml  dependabot-auto-merge.yml  dependabot-automerge.yml  dependabot-security-monitor.yml  fixed_ci.yml  hotfix-ci.yml  monthly-quality-review.yml  performance.yml  quality-gate.yml  quality-metrics.yml  quality-report.yml  quality.yml  release.yml  security-weekly.yml  security.yml  sync-lock-file.yml  test-ci.yml  test-report.yml
.kiro/steering/: product.md  rules.md  structure.md  tech.md
.kiro/tasks/: coverage-improvement-plan.md  coverage-status-summary.md  migration-guide.md  responsibility-separation-refactoring.md  task-checklist.md  test-implementation-examples.md
ci-reports/: ci_error_report_20250911_134401.json  ci_error_report_20250911_140026.json  ci_error_report_20250911_140358.json  ci_error_report_20250911_155358.json
coverage-reports/: coverage_report_20250912_225213.json
docs/: README.md  api-changes.md  architecture.md  ci-cd-compliance.md  configuration-consistency.md  coverage-integration-plan.md  dependency-analysis-results.md  global-tool-installation.md  migration-guide.md  processing-flow.md  python-314-compatibility.md  refactoring-guidelines.md  release-management.md  release-workflow.md  rewrite_implementation_plan.md  rules_summary.md  setup-guide.md  tasks.md  technical-debt.md  test-refactoring-plan.md  testing-strategy.md  workflow-consolidation-plan.md  workflow-dependency-mapping.md  workflow_consolidation_plan.md
docs/adr/: 001-project-architecture.md
docs/autopush/: gitignore_autopush_plan.md
docs/dev-archive/: README.md  api-changes.md  codeql-fixes-summary.md  dependency-analysis-results.md  development-checklist.md  development-prompt.md  multiplatform-test-integration-progress.md  phase1-completion-summary.md  phase2-timeout-analysis.md  python-314-compatibility.md  rules.md  setup-guide.md  test-cleanup-plan.md  test-fix-plan.md  testing-strategy.md  unimplemented-workflow.md  unit-test-expansion-plan.md  workflow-dependency-mapping.md
docs/internal/: README.md  rules_summary.md  security-exceptions.md
docs/templates/: pre-commit-config-python314.yaml
docs/troubleshooting/: README.md  pyupgrade-python314.md
error-reports/: test_error_report_20250910_195259.json
gitignore-templates/: README.md  common.gitignore  csharp.gitignore  docker.gitignore  go.gitignore  node.gitignore  python.gitignore  rust.gitignore  uv.gitignore  vscode.gitignore
logs/: .gitkeep
quality-history/: latest-metrics.json  metrics_20250911_043831.json  metrics_20250911_053645.json
scripts/: check_auth.py  ci-platform-diagnostics.py  ci-quality-check.py  coverage-check.py  coverage-monitor.py  generate-sbom.py  merge-coverage.py  optimize-ci-pipeline.py  optimize-windows-tests.py  parallel-test-runner.py  quality-metrics.py  quality-monitor.py  security-check.py  security-config.py  setup-dev-environment.py  setup-pre-commit.py  test-release-system.py  version-manager.py  windows-fast-test.py  windows-uv-setup.ps1
security-reports/: bandit-report.json  licenses-report.json  semgrep-report.json
src/setup_repo/: __init__.py  backup_manager.py  branch_cleanup.py  ci_environment.py  ci_error_handler.py  cli.py  compatibility.py  config.py  deploy_manager.py  git_operations.py  github_api.py  gitignore_manager.py  interactive_setup.py  json_merge.py  logging_config.py  logging_handlers.py  migration_checkpoint.py  migration_manager.py  monitor_manager.py  platform_detector.py  project_detector.py  python_env.py  quality_collectors.py  quality_errors.py  quality_formatters.py  quality_logger.py  quality_metrics.py  quality_trends.py  safety_check.py  security_helpers.py  security_utils.py  setup.py  setup_validators.py  sync.py  template_manager.py  utils.py  uv_installer.py  vscode_setup.py
tests/: __init__.py  common_markers.py  conftest.py  test_environment.py  test_quality_rules_verification.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_ci_platform_specific.py  test_cross_platform.py  test_cross_platform_compatibility.py  test_end_to_end_workflow.py  test_error_recovery_scenarios.py  test_error_scenarios.py  test_full_workflow.py  test_github_api_integration.py  test_integration_simplified.py  test_migration_integration.py  test_performance_benchmarks.py  test_quality_integration.py  test_setup_integration.py  test_sync_integration.py
tests/multiplatform/: __init__.py  helpers.py  test_cross_platform.py  test_cross_platform_common.py  test_macos_specific.py  test_platform_detection.py  test_unix_specific.py  test_windows_specific.py
tests/performance/: README.md  __init__.py  conftest.py  test_edge_cases.py  test_edge_cases_simple.py  test_error_recovery.py  test_large_repos.py  test_sync_performance.py
tests/security/: __init__.py  (+5 more)
(+145 files in other folders)
