[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setup-repository"
version = "1.0.0"
description = "ðŸš€ ã‚¯ãƒ­ã‚¹ãƒ—ãƒ©ãƒƒãƒˆãƒ•ã‚©ãƒ¼ãƒ å¯¾å¿œã®GitHubãƒªãƒã‚¸ãƒˆãƒªã‚»ãƒƒãƒˆã‚¢ãƒƒãƒ—ãƒ»åŒæœŸãƒ„ãƒ¼ãƒ«"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Setup Repository Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
setup-repo = "setup_repo.cli:main"

[project.urls]
Homepage = "https://github.com/scottlz0310/Setup-Repository"
Repository = "https://github.com/scottlz0310/Setup-Repository"
Issues = "https://github.com/scottlz0310/Setup-Repository/issues"

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/setup_repo"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true