[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setup-repository"
version = "2.0.0"
description = "GitHub repository setup and sync tool with modern CLI"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21.1",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
authors = [{ name = "Setup Repository Contributors" }]

[project.scripts]
setup-repo = "setup_repo.cli.app:app"

[project.urls]
Homepage = "https://github.com/scottlz0310/Setup-Repository"
Repository = "https://github.com/scottlz0310/Setup-Repository"
Issues = "https://github.com/scottlz0310/Setup-Repository/issues"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "basedpyright",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.13",
]
security = ["bandit>=1.9.2"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["T201", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["setup_repo"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "strict"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B603", "B607", "B404", "B604", "B310", "B108"]
severity = "medium"
confidence = "medium"

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--disable-warnings",
    "--cov=src/setup_repo",
    "--cov-report=term-missing",
    "--cov-report=html:output/htmlcov",
    "--cov-report=xml:output/coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/setup_repo"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*", "*/.*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
skip_empty = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "output/htmlcov"
title = "Setup Repository Coverage Report"

[tool.coverage.xml]
output = "output/coverage.xml"

[tool.hatch.build.targets.wheel]
packages = ["src/setup_repo"]
